--- a/web/sites/zedbet/config/sync/core.entity_view_display.node.promotion.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_view_display.node.promotion.default.yml
@@ -24,8 +24,8 @@ dependencies:
     - field.field.node.promotion.field_promotion_link_target
     - field.field.node.promotion.field_promotion_summary
     - field.field.node.promotion.field_promotion_summary_link
-    - field.field.node.promotion.field_ri
     - field.field.node.promotion.field_ribbon_background_color
+    - field.field.node.promotion.field_ribbon_label
     - field.field.node.promotion.field_right_side_block_content
     - field.field.node.promotion.field_right_side_block_link
     - field.field.node.promotion.field_right_side_block_option
@@ -225,14 +225,6 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-  field_ri:
-    weight: 124
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_ribbon_background_color:
     weight: 123
     label: above
@@ -241,6 +233,14 @@ content:
       opacity: '1'
     third_party_settings: {  }
     type: color_field_formatter_text
+    region: content
+  field_ribbon_label:
+    weight: 134
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_right_side_block_content:
     weight: 125
