--- a/web/sites/zedbet/config/sync/field.field.node.promotion.field_ribbon_label.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.promotion.field_ribbon_label.yml
@@ -1,13 +1,13 @@
-uuid: 7a0b0333-0842-41ed-b7a5-abd9cdf9e7d8
+uuid: b3ceb42b-9973-43b2-be3f-10c258337ed7
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_ri
+    - field.storage.node.field_ribbon_label
     - node.type.promotion
     - taxonomy.vocabulary.ribbon_labels
-id: node.promotion.field_ri
-field_name: field_ri
+id: node.promotion.field_ribbon_label
+field_name: field_ribbon_label
 entity_type: node
 bundle: promotion
 label: 'Ribbon label'
