PACIFIC-299 Configuration update

--- a/web/sites/zipang-casino/config/sync/feeds.feed_type.games_import.yml
+++ b/web/sites/zipang-casino/config/sync/feeds.feed_type.games_import.yml
@@ -218,3 +218,7 @@ mappings:
       value: external_game_id
     unique:
       value: '1'
+  -
+    target: langcode
+    map:
+      value: 'parent:field_language'
