--- a/web/sites/mobile-zedbet/config/sync/core.entity_form_display.node.promotion.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_form_display.node.promotion.default.yml
@@ -4,17 +4,52 @@ status: true
 dependencies:
   config:
     - field.field.node.promotion.body
+    - field.field.node.promotion.field_banner_image
+    - field.field.node.promotion.field_banner_link
+    - field.field.node.promotion.field_banner_link_target
+    - field.field.node.promotion.field_enable_disable_ribbon_tag
+    - field.field.node.promotion.field_field_enable_sticky_post
+    - field.field.node.promotion.field_field_enable_sticky_post2
+    - field.field.node.promotion.field_field_enable_sticky_pre
+    - field.field.node.promotion.field_field_enable_sticky_pre2
+    - field.field.node.promotion.field_hide_countdown
     - field.field.node.promotion.field_hide_promotion
     - field.field.node.promotion.field_mark_as_featured
+    - field.field.node.promotion.field_post_banner_image
+    - field.field.node.promotion.field_post_banner_link
+    - field.field.node.promotion.field_post_banner_link_target
+    - field.field.node.promotion.field_post_body
     - field.field.node.promotion.field_post_summary_blurb
+    - field.field.node.promotion.field_post_thumbnail_image
     - field.field.node.promotion.field_product_category
     - field.field.node.promotion.field_promo_availability
+    - field.field.node.promotion.field_ribbon_background_color
+    - field.field.node.promotion.field_ribbon_label
+    - field.field.node.promotion.field_ribbon_text_color
+    - field.field.node.promotion.field_sticky_background_post
+    - field.field.node.promotion.field_sticky_background_post2
+    - field.field.node.promotion.field_sticky_background_pre
+    - field.field.node.promotion.field_sticky_background_pre2
+    - field.field.node.promotion.field_sticky_link_target_post
+    - field.field.node.promotion.field_sticky_link_target_post2
+    - field.field.node.promotion.field_sticky_link_target_pre
+    - field.field.node.promotion.field_sticky_link_target_pre2
+    - field.field.node.promotion.field_sticky_text_color_post
+    - field.field.node.promotion.field_sticky_text_color_post2
+    - field.field.node.promotion.field_sticky_text_color_pre
+    - field.field.node.promotion.field_sticky_text_color_pre2
+    - field.field.node.promotion.field_sticky_url_post
+    - field.field.node.promotion.field_sticky_url_post2
+    - field.field.node.promotion.field_sticky_url_pre
+    - field.field.node.promotion.field_sticky_url_pre2
     - field.field.node.promotion.field_summary_blurb
     - field.field.node.promotion.field_summary_url
+    - field.field.node.promotion.field_summary_url_target
     - field.field.node.promotion.field_thumbnail_image
     - image.style.thumbnail
     - node.type.promotion
   module:
+    - color_field
     - entity_reference_views_select
     - field_group
     - image
@@ -26,9 +61,11 @@ third_party_settings:
   field_group:
     group_pre_login_promotion:
       children:
-        - field_summary_blurb
+        - group_promotion_summary
+        - group_promotion_banner
+        - body
       parent_name: ''
-      weight: 6
+      weight: 9
       format_type: details
       format_settings:
         id: ''
@@ -38,9 +75,12 @@ third_party_settings:
       label: 'Pre Login Promotion'
     group_post_login_promotion:
       children:
-        - field_post_summary_blurb
+        - group_promotion
+        - group_promo
+        - field_post_body
+        - group_sticky_component
       parent_name: ''
-      weight: 7
+      weight: 10
       format_type: details
       format_settings:
         id: ''
@@ -48,6 +88,122 @@ third_party_settings:
         open: false
         required_fields: true
       label: 'Post Login Promotion'
+    group_promotion_summary:
+      children:
+        - field_thumbnail_image
+        - field_summary_blurb
+      parent_name: group_pre_login_promotion
+      weight: 14
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Promotion Summary'
+    group_promotion_banner:
+      children:
+        - field_banner_image
+        - field_banner_link
+        - field_banner_link_target
+      parent_name: group_pre_login_promotion
+      weight: 15
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Promotion Banner'
+    group_sticky_component:
+      children:
+        - group_compo
+        - group_component_two
+      parent_name: group_post_login_promotion
+      weight: 16
+      format_type: details
+      format_settings:
+        label: 'Sticky Component'
+        open: true
+        required_fields: true
+        id: ''
+        classes: ''
+      label: 'Sticky Component'
+    group_promotion:
+      children:
+        - field_post_thumbnail_image
+        - field_post_summary_blurb
+      parent_name: group_post_login_promotion
+      weight: 12
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Promotion Summary'
+    group_promo:
+      children:
+        - field_post_banner_image
+        - field_post_banner_link
+        - field_post_banner_link_target
+      parent_name: group_post_login_promotion
+      weight: 13
+      format_type: details
+      format_settings:
+        label: 'Promotion Banner'
+        open: true
+        required_fields: true
+        id: ''
+        classes: ''
+      label: 'Promotion Banner'
+    group_compo:
+      children:
+        - field_field_enable_sticky_post
+        - field_sticky_url_post
+        - field_sticky_link_target_post
+        - field_sticky_text_color_post
+        - field_sticky_background_post
+      parent_name: group_sticky_component
+      weight: 12
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Component One'
+    group_component_two:
+      children:
+        - field_field_enable_sticky_post2
+        - field_sticky_url_post2
+        - field_sticky_link_target_post2
+        - field_sticky_text_color_post2
+        - field_sticky_background_post2
+      parent_name: group_sticky_component
+      weight: 13
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Component Two'
+    group_ribbon_tags:
+      children:
+        - field_enable_disable_ribbon_tag
+        - field_ribbon_label
+        - field_ribbon_text_color
+        - field_ribbon_background_color
+      parent_name: ''
+      weight: 11
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: 'Ribbon Tags'
 id: node.promotion.default
 targetEntityType: node
 bundle: promotion
@@ -55,7 +211,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 21
+    weight: 16
     settings:
       rows: 9
       summary_rows: 3
@@ -64,46 +220,293 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 12
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_hide_promotion:
-    weight: 9
+  field_banner_image:
+    weight: 12
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  field_banner_link:
+    weight: 13
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_banner_link_target:
+    weight: 14
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_enable_disable_ribbon_tag:
+    weight: 24
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_mark_as_featured:
+  field_field_enable_sticky_post:
+    weight: 23
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_field_enable_sticky_post2:
+    weight: 24
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_field_enable_sticky_pre:
+    weight: 22
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_field_enable_sticky_pre2:
+    weight: 24
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_hide_countdown:
+    weight: 6
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_hide_promotion:
     weight: 5
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_mark_as_featured:
+    weight: 4
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_post_banner_image:
+    weight: 23
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  field_post_banner_link:
+    weight: 24
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_post_banner_link_target:
+    weight: 25
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_post_body:
+    weight: 14
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea_with_summary
+    region: content
   field_post_summary_blurb:
-    weight: 26
+    weight: 16
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
+  field_post_thumbnail_image:
+    weight: 15
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
   field_product_category:
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: erviews_options_select
     region: content
   field_promo_availability:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
+  field_ribbon_background_color:
+    weight: 27
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_ribbon_label:
+    weight: 25
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_ribbon_text_color:
+    weight: 26
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_background_post:
+    weight: 28
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_background_post2:
+    weight: 28
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_background_pre:
+    weight: 29
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_background_pre2:
+    weight: 31
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_link_target_post:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_sticky_link_target_post2:
+    weight: 26
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_sticky_link_target_pre:
+    weight: 25
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_sticky_link_target_pre2:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_sticky_text_color_post:
+    weight: 27
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_text_color_post2:
+    weight: 27
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_text_color_pre:
+    weight: 28
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_text_color_pre2:
+    weight: 30
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
+  field_sticky_url_post:
+    weight: 24
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_sticky_url_post2:
+    weight: 25
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_sticky_url_pre:
+    weight: 23
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
+  field_sticky_url_pre2:
+    weight: 26
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_summary_blurb:
-    weight: 20
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
@@ -111,12 +514,18 @@ content:
     type: text_textarea
     region: content
   field_summary_url:
-    weight: 18
+    weight: 7
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_summary_url_target:
+    weight: 8
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_thumbnail_image:
     weight: 2
@@ -135,7 +544,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 19
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -143,17 +552,17 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 13
+    weight: 19
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 16
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 15
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -161,14 +570,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 20
+    weight: 21
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 20
     region: content
     third_party_settings: {  }
   title:
@@ -180,13 +589,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -195,7 +604,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 17
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
