[WEBSITE-3605] Fix Slider Sortation page

--- a/web/sites/mobile-casino-gold/config/sync/views.view.webcomposer_slider_ver2.yml
+++ b/web/sites/mobile-casino-gold/config/sync/views.view.webcomposer_slider_ver2.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - block.block.languagedropdownswitcher_2
     - field.storage.webcomposer_slider_v2_entity.field_log_in_state
     - field.storage.webcomposer_slider_v2_entity.field_post_banner_image
     - field.storage.webcomposer_slider_v2_entity.field_publish_date
@@ -691,50 +692,6 @@ display:
       display_extenders: {  }
       path: admin/structure/webcomposer_slider_v2_entity
       filters:
-        langcode:
-          id: langcode
-          table: webcomposer_slider_v2_entity_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            '***LANGUAGE_site_default***': '***LANGUAGE_site_default***'
-          group: 1
-          exposed: true
-          expose:
-            operator_id: langcode_op
-            label: Language
-            description: ''
-            use_operator: false
-            operator: langcode_op
-            identifier: langcode
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              e: '0'
-              subadmin: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: webcomposer_slider_v2_entity
-          entity_field: langcode
-          plugin_id: language
         field_title_value:
           id: field_title_value
           table: webcomposer_slider_v2_entity__field_title
@@ -784,6 +741,7 @@ display:
         empty: false
         access: false
         pager: false
+        header: false
       filter_groups:
         operator: OR
         groups:
@@ -801,6 +759,21 @@ display:
           expose:
             label: ''
           plugin_id: standard
+        changed:
+          id: changed
+          table: webcomposer_slider_v2_entity_field_data
+          field: changed
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: webcomposer_slider_v2_entity
+          entity_field: changed
+          plugin_id: date
       style:
         type: table
         options:
@@ -1347,6 +1320,20 @@ display:
         type: none
         options:
           offset: 0
+      header:
+        entity_block:
+          id: entity_block
+          table: views
+          field: entity_block
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: true
+          target: languagedropdownswitcher_2
+          view_mode: default
+          bypass_access: false
+          plugin_id: entity
     cache_metadata:
       max-age: 0
       contexts:
