--- a/web/sites/ptplus/config/sync/field.storage.webcomposer_slider_v2_entity.field_post_banner_link_target.yml
+++ b/web/sites/ptplus/config/sync/field.storage.webcomposer_slider_v2_entity.field_post_banner_link_target.yml
@@ -14,6 +14,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: _self
+      label: 'Same Frame'
+    -
       value: _top
       label: 'Same Window'
     -
