--- a/web/sites/777baby-casino/config/sync/core.entity_form_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_form_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_free_play
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_game
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_game_mobile
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_external_game_id
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_category
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_code
@@ -32,7 +33,6 @@ dependencies:
     - field_group
     - image
     - lucky_baby_desktop_games
-    - text
 third_party_settings:
   field_group:
     group_for_casino_page:
@@ -46,7 +46,7 @@ third_party_settings:
         id: ''
         classes: ''
         description: 'fields for casino page'
-        required_fields: true
+        required_fields: false
       label: 'Casino (for casino page)'
     group_for_games_page:
       children:
@@ -58,7 +58,7 @@ third_party_settings:
         id: ''
         classes: ''
         description: 'fields for games page'
-        required_fields: true
+        required_fields: false
       label: 'Games (for games page)'
     group_arcade_for_arcade_page_:
       children:
@@ -110,35 +110,42 @@ content:
     type: options_select
     region: content
   field_client_type:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_enable_free_play:
-    weight: 9
+    weight: 10
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_enable_game:
-    weight: 0
+    weight: 1
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_game_mobile:
+    weight: 19
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_external_game_id:
-    type: string_textfield
-    weight: 6
-    region: content
+    weight: 7
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_category:
-    weight: 13
+    weight: 1
     settings: {  }
     third_party_settings:
       conditional_fields:
@@ -162,14 +169,6 @@ content:
     type: erviews_options_buttons
     region: content
   field_game_code:
-    weight: 4
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_game_code_icore:
     weight: 5
     settings:
       size: 60
@@ -177,17 +176,16 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_game_description:
-    weight: 19
+  field_game_code_icore:
+    weight: 6
     settings:
-      rows: 9
-      summary_rows: 3
+      size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea_with_summary
+    type: string_textfield
     region: content
   field_game_filter:
-    weight: 14
+    weight: 2
     settings: {  }
     third_party_settings:
       conditional_fields:
@@ -243,19 +241,19 @@ content:
     type: string_textfield
     region: content
   field_game_provider:
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_tag:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_thumbnail:
-    weight: 3
+    weight: 4
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -263,7 +261,7 @@ content:
     type: image_image
     region: content
   field_game_title:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -279,30 +277,34 @@ content:
     type: image_image
     region: content
   field_game_type:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_provider_product:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
-  translation:
-    weight: 13
+  name:
+    type: string_textfield
+    weight: 0
     region: content
-    settings: {  }
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
 hidden:
   feeds_item: true
-  name: true
+  field_game_description: true
+  translation: true
   user_id: true
