--- a/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
+++ b/web/sites/777baby-casino/config/sync/core.entity_view_display.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_free_play
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_game
+    - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_enable_game_mobile
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_external_game_id
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_category
     - field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_game_code
@@ -37,7 +38,7 @@ bundle: lucky_baby_desktop_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 18
+    weight: 17
     label: above
     settings:
       link: true
@@ -45,7 +46,7 @@ content:
     type: entity_reference_label
     region: content
   field_arcade_game_category:
-    weight: 13
+    weight: 14
     label: above
     settings:
       link: true
@@ -61,14 +62,14 @@ content:
     type: entity_reference_label
     region: content
   field_client_type:
-    weight: 8
+    weight: 9
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_enable_free_play:
-    weight: 4
+    weight: 5
     label: above
     settings:
       format: default
@@ -78,7 +79,17 @@ content:
     type: boolean
     region: content
   field_enable_game:
-    weight: 7
+    weight: 8
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_enable_game_mobile:
+    weight: 20
     label: above
     settings:
       format: default
@@ -88,15 +99,15 @@ content:
     type: boolean
     region: content
   field_external_game_id:
-    type: string
-    weight: 22
-    region: content
+    weight: 19
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
   field_game_category:
-    weight: 12
+    weight: 14
     label: above
     settings:
       link: true
@@ -104,7 +115,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_code:
-    weight: 5
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -112,7 +123,7 @@ content:
     type: string
     region: content
   field_game_code_icore:
-    weight: 9
+    weight: 10
     label: above
     settings:
       link_to_entity: false
@@ -120,14 +131,14 @@ content:
     type: string
     region: content
   field_game_description:
-    weight: 11
+    weight: 13
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_game_filter:
-    weight: 14
+    weight: 15
     label: above
     settings:
       link: true
@@ -143,7 +154,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_icon_label:
-    weight: 20
+    weight: 18
     label: above
     settings:
       link_to_entity: false
@@ -151,7 +162,7 @@ content:
     type: string
     region: content
   field_game_provider:
-    weight: 10
+    weight: 11
     label: above
     settings:
       link: true
@@ -159,7 +170,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_tag:
-    weight: 6
+    weight: 7
     label: above
     settings:
       link: true
@@ -167,7 +178,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_thumbnail:
-    weight: 3
+    weight: 4
     label: above
     settings:
       image_style: ''
@@ -176,7 +187,7 @@ content:
     type: image
     region: content
   field_game_title:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link_to_entity: false
@@ -184,7 +195,7 @@ content:
     type: string
     region: content
   field_game_title_icon:
-    weight: 19
+    weight: 17
     label: above
     settings:
       image_style: ''
@@ -193,7 +204,7 @@ content:
     type: image
     region: content
   field_game_type:
-    weight: 17
+    weight: 16
     label: above
     settings:
       link: true
@@ -201,7 +212,7 @@ content:
     type: entity_reference_label
     region: content
   field_provider_product:
-    weight: 21
+    weight: 18
     label: above
     settings:
       link: true
