PACIFIC-205 added views for data export

--- a/web/sites/777baby-casino/config/sync/views.view.game_list_v3.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.game_list_v3.yml
@@ -1173,170 +1173,6 @@ display:
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_game_provider'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_game_tag'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_game_title'
-  rest_export_1:
-    display_plugin: rest_export
-    id: rest_export_1
-    display_title: 'REST export'
-    position: 2
-    display_options:
-      display_extenders: {  }
-      path: api/desktop_game_list
-      style:
-        type: node_list_serializer
-        options:
-          uses_fields: false
-          formats:
-            json: json
-      defaults:
-        style: false
-        row: false
-        filters: false
-        filter_groups: false
-        sorts: false
-        title: false
-      row:
-        type: data_entity
-        options: {  }
-      pager:
-        type: full
-        options:
-          items_per_page: 100
-          offset: 0
-          id: 0
-          total_pages: null
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          quantity: 9
-      filters:
-        langcode:
-          id: langcode
-          table: lucky_baby_desktop_games_entity_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: lucky_baby_desktop_games_entity
-          entity_field: langcode
-          plugin_id: language
-        field_enable_game_value:
-          id: field_enable_game_value
-          table: lucky_baby_desktop_games_entity__field_enable_game
-          field: field_enable_game_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: boolean
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-      sorts:
-        weight:
-          id: weight
-          table: taxonomy_term_field_data
-          field: weight
-          relationship: field_game_tag
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          entity_type: taxonomy_term
-          entity_field: weight
-          plugin_id: standard
-        field_game_title_value:
-          id: field_game_title_value
-          table: lucky_baby_desktop_games_entity__field_game_title
-          field: field_game_title_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: standard
-      rendering_language: '***LANGUAGE_language_interface***'
-      title: 'Desktop Game List'
-      enabled: false
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_interface'
-        - request_format
-        - url.query_args
-      tags:
-        - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game'
   rest_export_2:
     display_plugin: rest_export
     id: rest_export_2
@@ -1380,6 +1216,9 @@ display:
             field_enable_game:
               alias: enable_game
               raw_output: false
+            field_enable_game_mobile:
+              alias: enable_game_mobile
+              raw_output: false
             field_game_code:
               alias: game_code
               raw_output: false
@@ -1394,6 +1233,9 @@ display:
               raw_output: false
             field_game_code_icore_export:
               alias: game_code_icore
+              raw_output: false
+            field_external_game_id_export:
+              alias: external_game_id
               raw_output: false
             field_game_provider_export:
               alias: game_provider
@@ -1425,9 +1267,6 @@ display:
             field_game_tag_export_1:
               alias: game_tag_object
               raw_output: false
-            field_game_provider:
-              alias: provider
-              raw_output: false
             field_game_title_icon_export:
               alias: game_title_icon
               raw_output: false
@@ -1438,6 +1277,9 @@ display:
               alias: all_games_categories
               raw_output: false
             field_provider_product_export:
+              alias: provider_product
+              raw_output: false
+            field_external_game_id:
               alias: ''
               raw_output: false
       pager:
@@ -2003,6 +1845,67 @@ display:
           id: field_game_code_icore_export
           table: lucky_baby_desktop_games_entity__field_game_code_icore
           field: field_game_code_icore_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: 0
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
+        field_external_game_id_export:
+          id: field_external_game_id_export
+          table: lucky_baby_desktop_games_entity__field_external_game_id
+          field: field_external_game_id_export
           relationship: none
           group_type: group
           admin_label: ''
@@ -2869,6 +2772,133 @@ display:
           delta_first_last: 0
           field_api_classes: 0
           plugin_id: field_export
+        field_game_category_export_1:
+          id: field_game_category_export_1
+          table: lucky_baby_desktop_games_entity__field_game_category
+          field: field_game_category_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_entity_id
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: 1
+          delta_limit: '0'
+          delta_offset: '0'
+          delta_reversed: 0
+          delta_first_last: 0
+          field_api_classes: 0
+          plugin_id: field_export
+        field_game_provider_export_1:
+          id: field_game_provider_export_1
+          table: lucky_baby_desktop_games_entity__field_game_provider
+          field: field_game_provider_export
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_export
+          settings:
+            view_mode: default
+            extra:
+              id: id
+              title: 0
+              url: 0
+              type: 0
+              bundle: 0
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          field_api_classes: 0
+          plugin_id: field_export
         field_provider_product_export:
           id: field_provider_product_export
           table: lucky_baby_desktop_games_entity__field_provider_product
@@ -2936,69 +2966,6 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
-        field_external_game_id:
-          id: field_external_game_id
-          table: lucky_baby_desktop_games_entity__field_external_game_id
-          field: field_external_game_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
       filters:
         langcode:
           id: langcode
