--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_filter
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type_mobile
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_free_play
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_game_mobile
@@ -41,7 +42,7 @@ third_party_settings:
         - field_game_category
         - field_game_filter
       parent_name: ''
-      weight: 13
+      weight: 15
       format_type: fieldset
       format_settings:
         id: ''
@@ -53,7 +54,7 @@ third_party_settings:
       children:
         - field_game_filter_games
       parent_name: ''
-      weight: 14
+      weight: 16
       format_type: fieldset
       format_settings:
         id: ''
@@ -66,7 +67,7 @@ third_party_settings:
         - field_arcade_game_category
         - field_arcade_game_filter
       parent_name: ''
-      weight: 16
+      weight: 18
       format_type: fieldset
       format_settings:
         id: ''
@@ -79,7 +80,7 @@ third_party_settings:
         - field_game_title_icon
         - field_game_icon_label
       parent_name: ''
-      weight: 17
+      weight: 19
       format_type: fieldset
       format_settings:
         id: ''
@@ -95,7 +96,7 @@ bundle: zipang_desktop_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 15
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -113,13 +114,19 @@ content:
     type: options_select
     region: content
   field_client_type:
-    weight: 7
+    weight: 8
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_client_type_mobile:
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_enable_free_play:
-    weight: 9
+    weight: 11
     settings:
       display_label: true
     third_party_settings: {  }
@@ -140,7 +147,7 @@ content:
     type: boolean_checkbox
     region: content
   field_external_game_id:
-    weight: 19
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -188,7 +195,7 @@ content:
     type: string_textfield
     region: content
   field_game_description:
-    weight: 18
+    weight: 20
     settings:
       rows: 9
       summary_rows: 3
@@ -253,13 +260,13 @@ content:
     type: string_textfield
     region: content
   field_game_provider:
-    weight: 11
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_game_tag:
-    weight: 8
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -289,14 +296,14 @@ content:
     type: image_image
     region: content
   field_game_type:
-    weight: 10
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_provider_product:
     type: options_select
-    weight: 12
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
