--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v3.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v3.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.storage.zipang_desktop_games_entity.field_arcade_game_category
     - field.storage.zipang_desktop_games_entity.field_arcade_game_filter
     - field.storage.zipang_desktop_games_entity.field_client_type
+    - field.storage.zipang_desktop_games_entity.field_client_type_mobile
     - field.storage.zipang_desktop_games_entity.field_enable_free_play
     - field.storage.zipang_desktop_games_entity.field_enable_game
     - field.storage.zipang_desktop_games_entity.field_enable_game_mobile
@@ -1422,7 +1423,6 @@ display:
       style:
         type: node_list_serializer
         options:
-          uses_fields: false
           formats:
             json: json
       row:
@@ -1506,6 +1506,9 @@ display:
               raw_output: false
             field_enable_game_mobile:
               alias: enable_game_mobile
+              raw_output: false
+            field_client_type_mobile:
+              alias: client_type_mobile
               raw_output: false
       fields:
         id:
@@ -3136,6 +3139,68 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_client_type_mobile:
+          id: field_client_type_mobile
+          table: zipang_desktop_games_entity__field_client_type_mobile
+          field: field_client_type_mobile
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_key
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       pager:
         type: full
         options:
@@ -3234,6 +3299,7 @@ display:
         - 'config:field.storage.zipang_desktop_games_entity.field_arcade_game_category'
         - 'config:field.storage.zipang_desktop_games_entity.field_arcade_game_filter'
         - 'config:field.storage.zipang_desktop_games_entity.field_client_type'
+        - 'config:field.storage.zipang_desktop_games_entity.field_client_type_mobile'
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_game'
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_game_mobile'
